# branchboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: generate_screenshots.py
src/branchboard/: __main__.py  app.py  app.tcss  cache.py  classify.py  cli.py  github.py  scanner.py
src/branchboard/screens/: detail.py  loading.py
src/branchboard/widgets/: branch_table.py  filter_bar.py  summary_bar.py
src/git_fleet/: __main__.py  app.py  cache.py  classify.py  cli.py  github.py  models.py  scanner.py
src/git_fleet/screens/: detail.py
src/git_fleet/widgets/: branch_table.py  filter_bar.py  summary_bar.py
