[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "branchboard"
version = "0.1.0"
description = "A terminal dashboard for tracking Git branches and GitHub PRs across all your repos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["git", "github", "tui", "terminal", "dashboard", "branches", "pull-requests"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/somanathk/branchboard"
Repository = "https://github.com/somanathk/branchboard"
Issues = "https://github.com/somanathk/branchboard/issues"
Changelog = "https://github.com/somanathk/branchboard/blob/main/CHANGELOG.md"

[project.scripts]
branchboard = "branchboard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
